fix: Default styles on ios
Make sure input style is applied on ios devices correctly

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@ img {
   max-width: 100%;
 }
 
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 .menu-button,
 .close-button {
   background-color: transparent;
